# structured-email-address

./: CHANGELOG.md  Cargo.toml  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  psl-cascade.yml  release.yml
benches/: email.rs
src/: config.rs  error.rs  lib.rs  normalize.rs  parser.rs  provider.rs  tests.rs  validate.rs
src/error/: tests.rs
src/normalize/: tests.rs
src/parser/: tests.rs
src/provider/: tests.rs
src/validate/: tests.rs
tests/: conformance.rs
